Fix remaining test issues, and remove excluded buildpaths